--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <style>
         #map {
-            width: 1151px;
-            height: 846px;
+            width: 90vw;
+            margin: 4vw;
+            -webkit-box-shadow: 0px 0px 5px 3px #000;
+            box-shadow: 0px 0px 5px 3px #000;
         }
+
         </style>
         <title>St. Catharines Grouped by Nearest Park</title>
     </head>
