--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             margin: 4vw;
             -webkit-box-shadow: 0px 0px 5px 3px #000;
             box-shadow: 0px 0px 5px 3px #000;
+            height: 90vh;
         }
 
         </style>
