--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
         <script src="js/labels.js"></script>
         <script src="data/nearest_park_1.js"></script>
         <script>
-        var map = L.map('map', {
-            zoomControl:true, maxZoom:19, minZoom:12
-        })
+        var map = L.map('map').setView([43.178664, -79.241806], 13);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
