--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             box-shadow: 0px 0px 5px 3px #000;
             height: 90vh;
         }
+        @media only screen and (max-width: 768px) {
+            #map {
+                width: 84vw;
+                height: 84vh;
+            }
+        }
         head{
             background: #FFFAFA;
         }
