background color change

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             }
         }
         head{
-            background: #FFFAFA;
+            background: hsl(22, 100%, 96%);
         }
         body{
-            background: #FFFAFA;
+            background: hsl(22, 100%, 96%);
         }
         #navbar {
             background: #FFFAFA;
