button color change

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             background: hsl(22, 100%, 96%);
         }
         #navbar {
-            background: #FFFAFA;
+            background: hsl(22, 100%, 96%);
             height: fit-content;
             width: fit-content;
             font-size: calc(10px + 2vmin);
