--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             }
         }
         head{
-            background: hsl(22, 100%, 96%);
+            background: snow;
         }
         body{
-            background: hsl(22, 100%, 96%);
+            background: snow;
         }
         #navbar {
-            background: hsl(22, 100%, 96%);
+            background: snow;
             height: fit-content;
             width: fit-content;
             font-size: calc(10px + 2vmin);
